kubernetes/kontena-pharos/ingress/cert-manager/ingress-auto-tls.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: ingress-tls
  annotations:
    kubernetes.io/ingress.class: "nginx"    
    certmanager.k8s.io/issuer: "letsencrypt-staging"
    certmanager.k8s.io/acme-challenge-type: http01
spec:
  tls:
  - hosts:
    - ec2-52-203-197-40.compute-1.amazonaws.com
    secretName: auto-staging-tls
  rules:
  - host: ec2-52-203-197-40.compute-1.amazonaws.com
    http:
      paths:
      - path: /apple
        backend:
          serviceName: apple
          servicePort: 80
      - path: /banana
        backend:
          serviceName: banana
          servicePort: 80
